# katas

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
apps/example/: CMakeLists.txt
apps/minefields/: CMakeLists.txt  input.txt  main.cpp
libs/: CMakeLists.txt
libs/example/: CMakeLists.txt
libs/example/include/example/: example.h
libs/example/src/: example.cpp  example_p.h
libs/example/test/: test-example.cmake
libs/minefields/: CMakeLists.txt  README.md
libs/minefields/include/minefields/: core.h  hint.h  io.h
libs/minefields/src/: core.cpp  example.cpp  hint.cpp  io.cpp
libs/minefields/test/: CMakeLists.txt  test-minefields.cmake  test_example.cpp  test_hint.cpp
libs/supermarket/: CMakeLists.txt  README.md
libs/supermarket/docs/: brainstorm.md  retrospective.md
libs/supermarket/include/supermarket/: core.h  supermarket.h
libs/supermarket/src/: core.cpp  supermarket.cpp
libs/supermarket/test/: CMakeLists.txt  test-supermarket.cmake  test_supermarket.cpp
tools/cmake/: get_cpm.cmake  test.cmake
tools/docker/: Dockerfile
